--- a/Wishcard/index.html
+++ b/Wishcard/index.html
@@ -11,7 +11,7 @@
 
 				<div class="text">
 					
-					<h1> <span id="one">Sometimes</span> <span id="two">all we have to do is just looking back our past,</span> <span id="three">and remember how happy we were once together!</span> </h1>
+					<h1> <span id="one">Sometimes</span> <span id="two">all we have to do is just to look back our past,</span> <span id="three">and remember how happy we were once together!</span> </h1>
 
 					<h1> <span id="four">Goodbye my beloved team!</span></h1>
 		
