--- a/Calculator/calculator.html
+++ b/Calculator/calculator.html
@@ -54,7 +54,7 @@ CSS:
 	    					<a href="#"><i>clear history</i></a>
 	    					<ul>
 	    						<li class="history_row">
-	    							<p class="l"> </p>
+	    							<p onclick ="thuxem()" class="l"> </p>
 	    							<p class="r"> </p>
 	    						</li>
 	    						<li class="history_row">
