--- a/quizcities/quiz0.html
+++ b/quizcities/quiz0.html
@@ -61,7 +61,8 @@
 <div class="container">
 	<div id="background"></div>
 	<br>
-
+	
+	<img src="quiz-homepage.png" class="img-responsive center-block" alt="Quiz" >
 
 	<div id="header">
 
