--- a/quizcities/quiz1.html
+++ b/quizcities/quiz1.html
@@ -27,7 +27,7 @@
 <div class="container">
 
 
-	<img src="quiz.jpg" class="img-responsive center-block" alt="Cinque Terre" >
+	<img src="quiz.jpg" class="img-responsive center-block" alt="Quiz" >
 
 	<div id="header"></div>
 	<br>
