--- a/quizcities/quiz3.html
+++ b/quizcities/quiz3.html
@@ -5,13 +5,15 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas:700" rel="stylesheet">
+		
 		<script src="quiz.js"></script>
 		<script type="text/javascript">
 				
 				const pageNumber = 3;
 
 		</script>
+		<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
