--- a/quizcities/quiz6.html
+++ b/quizcities/quiz6.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas:700" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		
 
@@ -17,6 +18,7 @@
 				const pageNumber = 6;
 
 		</script>
+		<link rel="stylesheet" type="text/css" href="style.css">
 
 
 
