--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
 
   .bg-1 {
-  	background-color: #203748;
+  	background-color: #468966;
   	color: #ffffff;
   }
 
   .bg-2 {
-  	background-color: #1B9EFF;
+  	background-color: #FFB03B;
   	color: #ffffff;
   }
 
   .bg-3 {
-  	background-color: #203748;
+  	background-color: #468966;
   	color: #ffffff;
   }
 
@@ -36,7 +36,7 @@
   }
 
   .navbar {
-  	background-color: #FFA31B;
+  	background-color: #B64926;
   	color: #ffffff;
   	position: fixed;
   	padding-top: 5px;
