--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
 
   .bg-1 {
-  	background-color: #468966;
+  	background-color: #203748;
   	color: #ffffff;
   }
 
   .bg-2 {
-  	background-color: #FFB03B;
+  	background-color: #1B9EFF;
   	color: #ffffff;
   }
 
   .bg-3 {
-  	background-color: #468966;
+  	background-color: #203748;
   	color: #ffffff;
   }
 
@@ -36,7 +36,7 @@
   }
 
   .navbar {
-  	background-color: #B64926;
+  	background-color: #FFA31B;
   	color: #ffffff;
   	position: fixed;
   	padding-top: 5px;
@@ -86,13 +86,13 @@
 
 	<div class="row">
 		
-		<div class="col-md-6 text-right">
+		<div class="col-md-6 text-center">
 
-			<img src="trung.jpg" alt="Photo of Trung" class="img-responsive img-circle" style="display: inline; max-width: 150px">
+			<img src="trung.jpg" alt="Photo of Trung" class="img-responsive img-circle" style="display: inline; max-width: 200px">
 
 		</div>
 
-		<div class="col-md-6 text-left">
+		<div class="col-md-6 text-center">
 
 		  	<h3>Trung (Travis) Nguyen </h3>
 
