--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -63,11 +63,13 @@
 		}
 
 		footer {
-			background-color: #6e0107;
+			background-color: #aa894b;
 			color: white;
-			height: 5vh;
 			text-align: center;
+			line-height: 5;
 		}
+
+
 
 		#quick-info {
 			color: white;
@@ -103,11 +105,11 @@
 			margin: 0;
 		}
 
-		body {
+		#myCarousel {
 			width: 100%;
+			padding: 0;
 		}
 
-		
 
 
 
@@ -140,6 +142,8 @@
 
 	<div class="container-fluid">
 
+		<div class="row">
+
 		<div id="myCarousel" class="carousel slide" data-ride="carousel">
 			<!-- Indicators -->
 			<ol class="carousel-indicators">
@@ -147,6 +151,8 @@
 				<li data-target="#myCarousel" data-slide-to="1"></li>
 				<li data-target="#myCarousel" data-slide-to="2"></li>
 			</ol>
+
+
 
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
@@ -172,6 +178,8 @@
 				<span class="glyphicon glyphicon-chevron-right"></span>
 				<span class="sr-only">Sau</span>
 			</a>
+		</div>
+
 		</div>
 	</div>
 
