--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>asia Nhu Ngoc</title>
+	<title>Asia Nhu Ngoc</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -13,66 +13,78 @@
 <body>
 
 
-	<nav class="navbar navbar-inverse navbar-fixed-top">
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
-					<span class="icon-bar"></span> 
+					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Asia Như Ngọc</a>
 			</div>
-			<div class="collapse navbar-collapse" id="myNavbar">
+
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Giới thiệu</a></li>
-					<li><a href="#">Thực đơn</a></li>
-					<li><a href="#">Đặt món</a></li>
-					<li><a href="#">Liên hệ</a></li>
+					<li class=""><a href="introduction.html"> Giới thiệu<span class="sr-only">(current)</span></a></li>
+					<li class="dropdown">
+						<a href="menu.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Thực đơn<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="menu.html#menu-com">Các món cơm</a></li>
+							<li><a href="menu.html#menu-pho-bun">Các món phở bún</a></li>
+							<li><a href="menu.html#menu-takeaway">Hộp mì take-away</a></li>
+							<li class="divider"></li>
+							<li><a href="menu.html#menu-drink">Đồ uống </a></li>
+						</ul>
+					</li>
+					<li class=""><a href="#contact"> Liên hệ<span class="sr-only">(current)</span></a></li>
 				</ul>
-			</div>
-		</div>
+
+
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
 	</nav>
 
 	<div class="container-fluid">
 
 		<div class="row">
 
-		<div id="myCarousel" class="carousel slide" data-ride="carousel">
-			<!-- Indicators -->
-			<ol class="carousel-indicators">
-				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				<li data-target="#myCarousel" data-slide-to="1"></li>
-				<li data-target="#myCarousel" data-slide-to="2"></li>
-			</ol>
+			<div id="myCarousel" class="carousel slide" data-ride="carousel">
+				<!-- Indicators -->
+				<ol class="carousel-indicators">
+					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+					<li data-target="#myCarousel" data-slide-to="1"></li>
+					<li data-target="#myCarousel" data-slide-to="2"></li>
+				</ol>
 
 
 
-			<!-- Wrapper for slides -->
-			<div class="carousel-inner">
-				<div class="item active">
-					<img src="photos/carousel-1.jpg" alt="Food 1">
+				<!-- Wrapper for slides -->
+				<div class="carousel-inner">
+					<div class="item active">
+						<img src="photos/carousel-1.jpg" alt="Food 1">
+					</div>
+
+					<div class="item">
+						<img src="photos/carousel-2.jpg" alt="Food 2">
+					</div>
+
+					<div class="item">
+						<img src="photos/carousel-3.jpg" alt="Food 3">
+					</div>
 				</div>
 
-				<div class="item">
-					<img src="photos/carousel-2.jpg" alt="Food 2">
-				</div>
-
-				<div class="item">
-					<img src="photos/carousel-3.jpg" alt="Food 3">
-				</div>
+				<!-- Left and right controls -->
+				<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+					<span class="glyphicon glyphicon-chevron-left"></span>
+					<span class="sr-only">Trước</span>
+				</a>
+				<a class="right carousel-control" href="#myCarousel" data-slide="next">
+					<span class="glyphicon glyphicon-chevron-right"></span>
+					<span class="sr-only">Sau</span>
+				</a>
 			</div>
-
-			<!-- Left and right controls -->
-			<a class="left carousel-control" href="#myCarousel" data-slide="prev">
-				<span class="glyphicon glyphicon-chevron-left"></span>
-				<span class="sr-only">Trước</span>
-			</a>
-			<a class="right carousel-control" href="#myCarousel" data-slide="next">
-				<span class="glyphicon glyphicon-chevron-right"></span>
-				<span class="sr-only">Sau</span>
-			</a>
-		</div>
 
 		</div>
 	</div>
@@ -122,7 +134,7 @@
 				<h3>GIỚI THIỆU</h4>
 					<h4>NHÀ HÀNG CƠM VIỆT ASIA NHƯ NGỌC</h5><br>
 						<p>Chào mừng bạn đến với nhà hàng cơm Châu Á Như Ngọc, chuỗi nhà hàng mang phong cách ẩm thực Việt Nam đương đại dựa trên sự chắt lọc tinh hoa của ẩm thực truyền thống Việt Nam và châu Á...</p><br>
-						<button  type="button" class="btn btn-default"> Xem tiếp</button>
+						<a href="introduction.html" class="btn" role="button"> Xem tiếp</a>
 
 
 					</div>
@@ -146,19 +158,19 @@
 
 					<div class="col-sm-4">
 
-						<img  class="img-responsive " src="photos/menu-general-01.png"></img>
+						<a href="menu.html"><img  class="img-responsive " src="photos/menu-general-01.png"></img></a>
 
 					</div>
 
 					<div class="col-sm-4">
 
-						<img  class="img-responsive " src="photos/menu-general-02.png"></img>
+						<a href="menu.html"><img  class="img-responsive " src="photos/menu-general-02.png"></img></a>
 
 					</div>
 
 					<div class="col-sm-4">
 
-						<img  class="img-responsive " src="photos/menu-general-03.png"></img>
+						<a href="menu.html"><img  class="img-responsive " src="photos/menu-general-03.png"></img></a>
 
 					</div>
 
@@ -169,19 +181,19 @@
 
 					<div class="col-sm-4 menu">
 
-						<img  class="img-responsive " src="photos/menu-general-04.png"></img>
+						<a href="menu.html"><img  class="img-responsive " src="photos/menu-general-04.png"></img></a>
 
 					</div>
 
 					<div class="col-sm-4 menu">
 
-						<img  class="img-responsive " src="photos/menu-general-05.png"></img>
+						<a href="menu.html"><img  class="img-responsive " src="photos/menu-general-05.png"></img></a>
 
 					</div>
 
 					<div class="col-sm-4 menu">
 
-						<img  class="img-responsive " src="photos/menu-general-06.png"></img>
+						<a href="menu.html"><img  class="img-responsive " src="photos/menu-general-06.png"></img></a>
 
 					</div>
 
@@ -197,7 +209,7 @@
 					<div class="col-sm-4">
 
 						<h4>CHÚNG TÔI Ở ĐÂU ?</h4>
-						<p>asia Như Ngọc</p>
+						<p>Asia Như Ngọc</p>
 						<p>Obernstr. 27, 33620 Bielefeld</p>
 						<p>Điện thoại: 0151 716 5615 </p>
 						<p>Di động: (0521) 9384 8481</p>
@@ -218,13 +230,14 @@
 			</div>
 
 
-			<footer>
+			<footer id="copyleft">
 
 				© 2015 All Rights Reserved. Developed by Trung Nguyen @ TechMaster Vietnam
 
 
 			</footer>
 
+			<script type="text/javascript" href="script.js"></script>
 
 		</body>
 		</html>
