--- a/asianhungoc/introduction.html
+++ b/asianhungoc/introduction.html
@@ -50,27 +50,27 @@
 	<div class="container-fluid intro-page">
 		
 		<br>
-		<h4>Chào mừng đến với nhà hàng Asia Như Ngọc, nơi mang phong cách ẩm thực Việt Nam đương đại dựa trên sự chắt lọc tinh hoa của ẩm thực truyền thống Việt Nam và châu Á được phát triển và quản lý bởi gia đình Nhị - Chúc.</h4>
+		<h>Chào mừng đến với nhà hàng Asia Như Ngọc, nơi mang phong cách ẩm thực Việt Nam đương đại dựa trên sự chắt lọc tinh hoa của ẩm thực truyền thống Việt Nam và châu Á được phát triển và quản lý bởi gia đình Nhị - Chúc.</h5><br>
 
 		<br><img class="img-responsive" src="photos/introduction-01.jpeg"><br>
 
-		<h4>Nhà hàng đầu tiên của chúng tôi đã khai trương tại Obernstr. 27 - 33602 Bielefeld, Đức vào tháng 08/2016 và nhận được sự yêu mến, ủng hộ của nhiều thực khách.  </h4>
+		<h5>Nhà hàng đầu tiên của chúng tôi đã khai trương tại Obernstr. 27 - 33602 Bielefeld, Đức vào tháng 08/2016 và nhận được sự yêu mến, ủng hộ của nhiều thực khách.  </h5>
 
 		<br><img class="img-responsive" src="photos/introduction-02.jpeg"><br>
 
-		<h4>Tháng 8/2017, sau 1 năm ghi dấu thành công cùng thực khách Việt Nam tại Đức, chúng tôi hân hạnh mở rộng quy mô nhà hàng thứ hứa hẹn mang đến cho mọi du khách những trải nghiệm đặc sắc với nhiều món ngon, nhiều lựa chọn chỉ có thể tìm thấy ở Gia Viên.</h4>
+		<h5>Tháng 8/2017, sau 1 năm ghi dấu thành công cùng thực khách Việt Nam tại Đức, chúng tôi hân hạnh mở rộng quy mô nhà hàng thứ hứa hẹn mang đến cho mọi du khách những trải nghiệm đặc sắc với nhiều món ngon, nhiều lựa chọn chỉ có thể tìm thấy ở Gia Viên.</h5>
 
 		<br><img class="img-responsive" src="photos/introduction-03.jpeg"><br>
 
-		<h4>Địa chỉ nhà hàng: 
+		<h5><strong>Địa chỉ nhà hàng</strong>: <br><br>
 
-			Nhà hàng Gia Viên – 228 Bà Triệu, Hà Nội 
-			Điện thoại: 04 3978 5586/ 3978 0866 
-			Hotline: 0968 266 266
+			Nhà hàng Asia Như Ngọc – Obernstr. 27 - 33602 Bielefeld<br>
+			Điện thoại: 04 3978 5586/ 3978 0866 <br>
+			Hotline: 0968 266 266<br><br>
 
-			Nhà hàng Gia Viên – 18 Phạm Văn Đồng, Vĩnh Thọ, Nha Trang
-			Điện thoại: 05 835 41 999/ 05 835 41 188
-			Hotline: 0946 491 888</h4><br>
+			Nhà hàng Gia Viên – Obernstr. 38 - 33602 Berlin<br>
+			Điện thoại: 05 835 41 999/ 05 835 41 188<br>
+			Hotline: 0946 491 888</h5><br>
 
 		</div>
 
@@ -80,20 +80,20 @@
 
 				<div class="col-sm-4">
 
-					<h4>CHÚNG TÔI Ở ĐÂU ?</h4>
+					<h5>CHÚNG TÔI Ở ĐÂU ?</h5>
 					<p>Asia Như Ngọc</p>
 					<p>Obernstr. 27, 33620 Bielefeld</p>
 					<p>Điện thoại: 0151 716 5615 </p>
 					<p>Di động: (0521) 9384 8481</p>
 				</div>
 				<div class="col-sm-4">
-					<h4>GIỜ MỞ CỬA</h4>
+					<h5>GIỜ MỞ CỬA</h5>
 					<p>Thứ Hai - Chủ Nhật</p>
 					<p>11:00 ~ 22:00 </p>
 
 				</div>
 				<div class="col-sm-4">
-					<h4>TRANG MẠNG XÃ HỘI</h4>
+					<h5>TRANG MẠNG XÃ HỘI</h5>
 					<p></p>
 				</div>
 
