--- a/asianhungoc/introduction.html
+++ b/asianhungoc/introduction.html
@@ -50,7 +50,7 @@
 	<div class="container-fluid intro-page">
 		
 		<br>
-		<h>Chào mừng đến với nhà hàng Asia Như Ngọc, nơi mang phong cách ẩm thực Việt Nam đương đại dựa trên sự chắt lọc tinh hoa của ẩm thực truyền thống Việt Nam và châu Á được phát triển và quản lý bởi gia đình Nhị - Chúc.</h5><br>
+		<h5>Chào mừng đến với nhà hàng Asia Như Ngọc, nơi mang phong cách ẩm thực Việt Nam đương đại dựa trên sự chắt lọc tinh hoa của ẩm thực truyền thống Việt Nam và châu Á được phát triển và quản lý bởi gia đình Nhị - Chúc.</h5><br>
 
 		<br><img class="img-responsive" src="photos/introduction-01.jpeg"><br>
 
