--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -7,7 +7,9 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic:400i" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -38,9 +40,11 @@
 							<li><a href="menu.html#menu-drink">Đồ uống </a></li>
 						</ul>
 					</li>
-					<li class=""><a href="#contact"> Liên hệ<span class="sr-only">(current)</span></a></li>
+					<li class=""><a href="#contact"> Liên hệ <span class="sr-only">(current)</span></a></li>
+					<li class=""><a href="#contact"> <i class="fa fa-facebook-official fa-2x" aria-hidden="true"> </i> </a></li>
+					<li class=""><a href="#contact"> <i class="fa fa-instagram fa-2x" aria-hidden="true"> </i> </a></li>
+						
 				</ul>
-
 
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
@@ -103,14 +107,14 @@
 
 			<div class="col-sm-4">
 
-				<p class="text-center">Gọi số: 0151 716 5615 </p>
+				<p class="text-center"><i class="fa fa-phone fa-4x" aria-hidden="true"></i> 0151 716 5615 </p>
 
 			</div>
 
 
 			<div class="col-sm-4">
 
-				<p class="text-center">Địa chỉ: Obernstr. 27, 33620 Bielefeld</p>
+				<p class="text-center"><i class="fa fa-map-marker fa-4x" aria-hidden="true"></i> Obernstr. 27, 33620 Bielefeld</p>
 
 			</div>
 
@@ -222,7 +226,8 @@
 					</div>
 					<div class="col-sm-4">
 						<h4>TRANG MẠNG XÃ HỘI</h4>
-						<p></p>
+						<i class="fa fa-facebook-official fa-2x" aria-hidden="true">   Facebook </i> <br> 
+						<i class="fa fa-instagram fa-2x" aria-hidden="true">   Instagram</i> 
 					</div>
 
 				</div>
