--- a/restaurant/detail.html
+++ b/restaurant/detail.html
@@ -28,8 +28,9 @@
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#"> Giới thiệu<span class="sr-only">(current)</span></a></li>
+					
 					<li class=""><a href="index.html"> Trang chủ <span class="sr-only">(current)</span></a></li>
+					<li class=""><a href="#"> Giới thiệu<span class="sr-only">(current)</span></a></li>
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Thực đơn<span class="caret"></span></a>
@@ -41,7 +42,7 @@
 							<li><a href="menu.html#menu-drink">Đồ uống </a></li>
 						</ul>
 					</li>
-					<li class=""><a href="#"> Liên hệ<span class="sr-only">(current)</span></a></li>
+					<li class=""><a href="#contact"> Liên hệ<span class="sr-only">(current)</span></a></li>
 				</ul>
 
 
