--- a/photoslidecomparision/index.html
+++ b/photoslidecomparision/index.html
@@ -3,14 +3,14 @@
 <head>
 	<title></title>
 </head>
-<script src="jquery-3.1.1.js"></script>
-<script src="jquery.event.move.js"></script>
-<script src="jquery.twentytwenty.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="twentytwenty-master/js/jquery.event.move.js"></script>
+<script src="twentytwenty-master/js/jquery.twentytwenty.js"></script>
+
+<link rel="stylesheet" href="twentytwenty-master/css/twentytwenty.css" type="text/css" media="screen" />
+
 <style type="text/css">
 	
-img {
-	width: 1200px;
-}
 
 </style>
 <body>
@@ -22,12 +22,11 @@ img {
 
 <script>
 
-$(window).load(function() {
   $("#container1").twentytwenty();
-});
 
 </script>
 
 
 </body>
 </html>
+
