--- a/restaurant/detail.html
+++ b/restaurant/detail.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Asia Nhu Ngoc</title>
+		<title>Asia Nhu Ngoc</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic:400i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Andika" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Tinos" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	
 
 </head>
@@ -43,6 +48,8 @@
 						</ul>
 					</li>
 					<li class=""><a href="#contact"> Liên hệ<span class="sr-only">(current)</span></a></li>
+						<li class=""><a href="#contact"> <i class="fa fa-facebook-official fa-2x" aria-hidden="true"> </i> </a></li>
+					<li class=""><a href="#contact"> <i class="fa fa-instagram fa-2x" aria-hidden="true"> </i> </a></li>
 				</ul>
 
 
@@ -79,10 +86,10 @@
 				<p>11:00 ~ 22:00 </p>
 
 			</div>
-			<div class="col-sm-4">
-				<h4>TRANG MẠNG XÃ HỘI</h4>
-				<p></p>
-			</div>
+				<div class="col-sm-4">
+						<h4>TRANG MẠNG XÃ HỘI</h4>
+						<i class="fa fa-facebook-official fa-2x" aria-hidden="true"> </i> <i class="fa fa-instagram fa-2x" aria-hidden="true"> </i> 
+					</div>
 
 		</div>
 
