--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -8,6 +8,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic:400i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Andika" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Tinos" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
@@ -101,20 +104,20 @@
 
 			<div class="col-sm-4">
 
-				<p class="text-center">Giờ mở cửa: 11:00 ~ 22:00 </p>
+				<p class="text-center"><i class="fa fa-clock-o" aria-hidden="true"></i> Giờ mở cửa: 11:00 ~ 22:00 </p>
 
 			</div>
 
 			<div class="col-sm-4">
 
-				<p class="text-center"><i class="fa fa-phone fa-4x" aria-hidden="true"></i> 0151 716 5615 </p>
+				<p class="text-center"><i class="fa fa-phone" aria-hidden="true"></i> 0151 716 5615 </p>
 
 			</div>
 
 
 			<div class="col-sm-4">
 
-				<p class="text-center"><i class="fa fa-map-marker fa-4x" aria-hidden="true"></i> Obernstr. 27, 33620 Bielefeld</p>
+				<p class="text-center"><i class="fa fa-map-marker" aria-hidden="true"></i> Obernstr. 27, 33620 Bielefeld</p>
 
 			</div>
 
@@ -135,7 +138,7 @@
 			<div class="col-sm-6" id="description">
 
 				<img class="img-responsive" src="photos/logo.png"></img>
-				<h3>GIỚI THIỆU</h4>
+				<h3>GIỚI THIỆU</h3>
 					<h4>NHÀ HÀNG CƠM VIỆT ASIA NHƯ NGỌC</h5><br>
 						<p>Chào mừng bạn đến với nhà hàng cơm Châu Á Như Ngọc, chuỗi nhà hàng mang phong cách ẩm thực Việt Nam đương đại dựa trên sự chắt lọc tinh hoa của ẩm thực truyền thống Việt Nam và châu Á...</p><br>
 						<a href="introduction.html" class="btn" role="button"> Xem tiếp</a>
@@ -226,8 +229,7 @@
 					</div>
 					<div class="col-sm-4">
 						<h4>TRANG MẠNG XÃ HỘI</h4>
-						<i class="fa fa-facebook-official fa-2x" aria-hidden="true">   Facebook </i> <br> 
-						<i class="fa fa-instagram fa-2x" aria-hidden="true">   Instagram</i> 
+						<p><i class="fa fa-facebook-official fa-2x" aria-hidden="true"> </i> <i class="fa fa-instagram fa-2x" aria-hidden="true"> </i> </p>
 					</div>
 
 				</div>
