--- a/restaurant/menu.html
+++ b/restaurant/menu.html
@@ -7,13 +7,18 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic:400i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Andika" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Tinos" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.min.css">
 	
 
 </head>
 <body onload="menuDataLoad()">
 
-<div id="background"></div>
+	<div id="background"></div>
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
@@ -42,6 +47,8 @@
 						</ul>
 					</li>
 					<li class=""><a href="#contact"> Liên hệ<span class="sr-only">(current)</span></a></li>
+					<li class=""><a href="#contact"> <i class="fa fa-facebook-official fa-2x" aria-hidden="true"> </i> </a></li>
+					<li class=""><a href="#contact"> <i class="fa fa-instagram fa-2x" aria-hidden="true"> </i> </a></li>
 				</ul>
 
 
@@ -110,7 +117,7 @@
 			</div>
 			<div class="col-sm-4">
 				<h4>TRANG MẠNG XÃ HỘI</h4>
-				<p></p>
+				<i class="fa fa-facebook-official fa-2x" aria-hidden="true"> </i> <i class="fa fa-instagram fa-2x" aria-hidden="true"> </i> 
 			</div>
 
 		</div>
