--- a/regform/account.html
+++ b/regform/account.html
@@ -35,6 +35,10 @@
 			padding-top: 10px;
 		}
 
+		#info {
+			background-color: #DFF0D8;
+		}
+
 	</style>
 
 
@@ -52,43 +56,46 @@
 				<p>Hello <span class="firstName"></span> !</p>
 				<p>Welcome you to the Techmaster Fitness Club! </p>
 				<p class="text-justify">Please read again your personal information below. In case of any mistake, please email us at <a href="mailto:fitness-club@techmaster.vn?Subject=Hello%20again" target="_top">fitness-club@techmaster.vn</a> for correction. Thanks for your interest and support in Techmaster Fitness Club! </p>
+				<p>Best Regards</p>
+				<p>On behalf of the club president </p>
+				<p>Phan Khuê</p>
 
-				<div class="panel panel-default">
+				<div class="panel panel-default" id="info">
 					<div class="panel-body">
 						<h5>Your personal information:</h4>
 
-						<dl class="dl-horizontal">
-							<dt>Name</dt>
-							<dd><span class="firstName"> Trung </span></dd>
-							<dt>Gender</dt>
-							<dd><span id="gender"> Male </span></dd>
-							<dt>Email Address:</dt>
-							<dd><span id="emailAdd"> minhtrung.nguyen@live.com</span></dd>
-							<dt>Mobile Number:</dt>
-							<dd><span id="mobileNumber"> 0904</span></dd>
-							<dt>Year of Birth:</dt>
-							<dd><span id="yearOfBirth"> 1985</span></dd>
-						</dl>
+							<dl class="dl-horizontal">
+								<dt>Name</dt>
+								<dd><span class="firstName">  </span></dd>
+								<dt>Gender</dt>
+								<dd><span id="gender">  </span></dd>
+								<dt>Email Address:</dt>
+								<dd><span id="emailAdd"> </span></dd>
+								<dt>Mobile Number:</dt>
+								<dd><span id="mobileNumber"> </span></dd>
+								<dt>Year of Birth:</dt>
+								<dd><span id="yearOfBirth"> </span></dd>
+							</dl>
 
+						</div>
 					</div>
-				</div>
-				
 
+
+				</div>
 			</div>
 		</div>
-	</div>
 
-	<script>
+		<script>
 
-		formData = getSearchObject();
+			formData = getSearchObject();
 
 
-		function getSearchObject() {
-			
+			function getSearchObject() {
 
-			if (location.search === "") return {};
 
-			var o = {},
+				if (location.search === "") return {};
+
+				var o = {},
 			// nvPairs stand for name-value Paris 
 			// location.search is querrystring part of the url (the part after and includes "?")
 			// get nvParis by substr (deleting) the 1st character ("?"), replacing all "+" characters (appearing because of spaces in original input values), then splitting the string upon character "&". 
@@ -104,7 +111,7 @@
 				var n = decodeURIComponent(e < 0 ? pair : pair.substr(0,e)),
 				// getting the value. If "=" doesn't exist, return the null, otherwise, taking only string from position e + 1 to pair.length - e. 
 				v = (e < 0 || e + 1 == pair.length) 
-				? null : 
+				? "" : 
 				decodeURIComponent(pair.substr(e + 1,pair.length - e));
 				
 				// not really understand the below part
@@ -121,16 +128,25 @@
 		function loadData(formData) {
 
 
-			if (formData["gender"] === "Female")
+			if (formData["gender"] === "Female") {
+				document.getElementsByClassName("firstName")[0].innerText = "Ms. " + upCaseFirstCharacter(formData["firstName"]);
 
-				document.getElementsByClassName("firstName")[0].innerText = "Ms. " + formData["firstName"];
+				document.getElementById("info").style.backgroundColor ="#F2DEDE";
+			}
 
-			else if (formData["gender"] === "Male")
+			else if (formData["gender"] === "Male") {
 
-				document.getElementsByClassName("firstName")[0].innerText = "Mr. " + formData["firstName"];
+				document.getElementsByClassName("firstName")[0].innerText = "Mr. " + upCaseFirstCharacter(formData["firstName"]);
+				document.getElementById("info").style.backgroundColor ="#DFF0D8";
+			}
 			
-			document.getElementsByClassName("firstName")[1].innerText = formData["firstName"] + " " + formData["lastName"];
-			document.getElementById("gender").innerText = formData["gender"];
+			document.getElementsByClassName("firstName")[1].innerText = upCaseFirstCharacter(formData["lastName"]) + " " + upCaseFirstCharacter(formData["firstName"]);
+			
+			if (formData["gender"] === undefined) 
+				document.getElementById("gender").innerText ="";
+			else 
+				document.getElementById("gender").innerText = formData["gender"];
+			
 			document.getElementById("emailAdd").innerText = formData["emailAdd"];
 			document.getElementById("mobileNumber").innerText = formData["mobileNumber"];
 			document.getElementById("yearOfBirth").innerText = formData["yearOfBirth"];
@@ -138,6 +154,18 @@
 
 
 		loadData(formData);
+
+		function upCaseFirstCharacter(str) {
+			str = str.toLowerCase().split(" ");
+			str2 = "";
+			for (var i=0; i<str.length; i++) {
+
+				str[i] = str[i].charAt(0).toUpperCase() + str[i].slice(1);
+				str2 = str2.concat(" ", str[i]);
+
+			}
+			return str2;
+		}
 
 	</script>
 </body>
