--- a/randomquote/index.html
+++ b/randomquote/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Random Quote Machine - Free Code Camp Front-End assignment</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://www.greensock.com/js/src/utils/SplitText.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+
 	<script type="text/javascript">
 
 
@@ -15,7 +18,6 @@
 		//   dataType: "jsonp",
 		//   // jsonpCallback: "logResults"
 		// });
-
 
 		// var url = "https://api.forismatic.com/api/1.0/?method=getQuote&format=json&lang=en";
 		function logResults(json) {
@@ -30,13 +32,129 @@
 
 
 		$.getJSON('https://api.forismatic.com/api/1.0/?method=getQuote&lang=en&format=jsonp&jsonp=?', logResults);
-              
+
+		// Quotes about learning from goodreads -- http://www.goodreads.com/quotes/tag/learning
+
+		// DISCLAIMER: This function does require jQuery. I've used it here because the project I'm building this for already uses jQuery, so I thought why not. It can be modified quite simply to be done in raw JavaScript.  Just thought I'd let you know.
 
 
 
-	</script>
+
+// This is the funtion you need to copy
+// Copy from line 9 to 34
+
+function autoType(elementClass, typingSpeed){
+	var thhis = $(elementClass);
+	thhis.css({
+		"position": "relative",
+		"display": "inline-block"
+	});
+	thhis.prepend('<div class="cursor" style="right: initial; left:0;"></div>');
+	thhis = thhis.find(".text-js");
+	var text = thhis.text().trim().split('');
+	var amntOfChars = text.length;
+	var newString = "";
+	thhis.text("|");
+	setTimeout(function(){
+		thhis.css("opacity",1);
+		thhis.prev().removeAttr("style");
+		thhis.text("");
+		for(var i = 0; i < amntOfChars; i++){
+			(function(i,char){
+				setTimeout(function() {        
+					newString += char;
+					thhis.text(newString);
+				},i*typingSpeed);
+			})(i+1,text[i]);
+		}
+	},1500);
+}
+
+$(document).ready(function(){
+  // Now to start autoTyping just call the autoType function with the 
+  // class of outer div
+  // The second paramter is the speed between each letter is typed.   
+  autoType(".type-js",50);
+});
+
+
+</script>
+
+<style>
+
+	.text-js{
+		opacity: 0;
+	}
+	.cursor{
+		display: block;
+		position: absolute;
+		height: 100%;
+		top: 0;
+		right: -5px;
+		width: 2px;
+		/* Change colour of Cursor Here */
+		background-color: white;
+		z-index: 1;
+		animation: flash 0.5s none infinite alternate;
+	}
+
+	@keyframes flash{
+		0%{
+			opacity: 1;
+		}
+		100%{
+			opacity: 0;
+		}
+	}
+
+	@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');
+
+	*{
+		margin: 0;
+		padding: 0;
+		boz-sizing: border-box;
+		font-family: "Open Sans", sans-serif
+	}
+	body{
+		background: linear-gradient(135deg,#00C4FF,#9D1BB2);
+		height: 100vh;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.headline{
+		margin: 20px;
+		color: white;
+		font-size: 32px;
+		text-align: center;
+		h1{
+			letter-spacing: 1.6px;
+			font-weight: 300;
+		}
+	}
+
+	.twitterLink{
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		margin: 10px 15px;
+		z-index: 3;
+		svg{
+			width: 25px;
+		}
+	}
+
+
+</style>
 </head>
 <body>
+
+	<div class="type-js headline">
+		<h1 class="text-js">Six essential qualities that are the key to success: Sincerity, personal integrity, humility, courtesy, wisdom, charity.</h1>
+
+	</div>
+
 
 </body>
 </html>
