--- a/memorycard/index.html
+++ b/memorycard/index.html
@@ -1,224 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Memory </title>
+  <title>Memory Card - Joker Game</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-  <style type="text/css">
 
-    body {
-      background-color:#00AAAA; }
+  <link rel="stylesheet" type="text/css" href="style.css">
 
-      #background {
+</head>
 
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-image: url('photos/background.jpg');
-        background-repeat: repeat;
-        background-attachment: fixed;
-        background-size: 100%;
-        z-index: -2;
+<body>
 
-      }
+  <div class="container-fluid">
 
-      .row, .row-1, .row-2 {
-        width: 90%;
-        margin: auto;
-        text-align: center;
+   <div id="background"></div>
+   <br><br>
+   <h1>Memory Card - Joker Game</h1>
+   <br>
+   <p>Click to see the effect.</p>
+   <br><br>
 
-      }
+   <div class="row">
 
-      .row-2 {
-        clear: both;
-      }
-
-      img {
-        width: 95%;
-        display: inline;
-        padding: 5px;
-        opacity: 1;
-      }
-
-      img:hover { 
-        background-color: yellow;
-      }
-
-      .col-sm-3 {
-        width: 16.6666666666%;
-        border: 0;
-        margin: 0;
-        float: left;
-        text-align: center;
-      }
-
-
-
-      h1, p {
-        text-align: center;
-        color: #F2DFDD;
-      }
-
-      footer {
-        clear: both;
-        text-align: left;
-      }
-
-      #snow{
-        background: none;
-        font-family: Androgyne;
-        background-image: url('http://www.wearewebstars.dk/codepen/img/s1.png'), url('http://www.wearewebstars.dk/codepen/img//s2.png'), url('http://www.wearewebstars.dk/codepen/img//s3.png');
-        height: 100%;
-        left: 0;
-        position: absolute;
-        top: 0;
-        width: 100%;
-        z-index:-1;
-        -webkit-animation: snow 10s linear infinite;
-        -moz-animation: snow 10s linear infinite;
-        -ms-animation: snow 10s linear infinite;
-        animation: snow 10s linear infinite;
-      }
-      @keyframes snow {
-        0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-        50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-        100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
-      }
-      @-moz-keyframes snow {
-        0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-        50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-        100% {background-position: 400px 1000px, 200px 400px, 100px 300px;}
-      }
-      @-webkit-keyframes snow {
-        0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-        50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-        100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
-      }
-      @-ms-keyframes snow {
-        0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-        50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-        100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
-      } 
-
-
-
-    </style>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="memory.js"></script>
-  </head>
-  <body onload="loadData(12)">
-
-    <div class="container-fluid">
-
-      <div id="background"></div>
-      <h1>Memory Card - Joker Game</h1>
-      <p>Click to see the effect.</p>
-
-
-      <div id="snow"></div>
-
-
-      <div class="row">
-
-        <div class="row-1">
-          <div class="col-sm-3"><img class="hover15" id = "00" src="photos/photo_front.png" data-hide = ""></div>
-          <div class="col-sm-3"><img class="hover15" id = "01" src="photos/photo_front.png" data-hide = ""></div>
-          <div class="col-sm-3"><img class="hover15" id = "02" src="photos/photo_front.png" data-hide = ""></div>
-          <div class="col-sm-3"><img class="hover15" id = "03" src="photos/photo_front.png" data-hide = ""></div>
-          <div class="col-sm-3"><img class="hover15" id = "04" src="photos/photo_front.png" data-hide = ""></div>
-          <div class="col-sm-3"><img class="hover15" id = "05" src="photos/photo_front.png" data-hide = ""></div>
-
-        </div>
-
-        <div class="row-2">
-
-          <div class="col-sm-3"><img id = "06" src="photos/photo_front.png" data-hide = ""></div>
-          <div class="col-sm-3"><img id = "07" src="photos/photo_front.png" data-hide = ""></div>
-          <div class="col-sm-3"><img id = "08" src="photos/photo_front.png" data-hide = ""></div>
-          <div class="col-sm-3"><img id = "09" src="photos/photo_front.png" data-hide = ""></div>
-          <div class="col-sm-3"><img id = "10" src="photos/photo_front.png" data-hide = ""></div>
-          <div class="col-sm-3"><img id = "11" src="photos/photo_front.png" data-hide = ""></div>
-
-        </div>
-      </div>
-
-      <footer>
-
-        <p>Resources</p>
-        <p><a href="https://www.freevector.com/joker-head-vector-24534#">Joker Head Vecotr</a><br></p>
-        <p><a href="https://www.freevector.com/flat-colorful-joker-card-vectors-24576">Flat Colorful Joker Card Vectors</a></p>
-
-      </footer>
-
+    <div class="card">
+      <img class="front" src="" alt="">
+      <img class="back" src="photos/photo_front.png">
     </div>
 
-    <script type="text/javascript">
 
-      function flipOff() {
+    <div class="card">
+      <img class="front" src="" alt="">
+      <img class="back" src="photos/photo_front.png">
+    </div>
 
-        totalFlipOn +=1;
+    <div class="card">
+      <img class="front" src="" alt="">
+      <img class="back" src="photos/photo_front.png">
+    </div>
 
-        if (totalFlipOn <3 ) {
+    <div class="card">
+      <img class="front" src="" alt="">
+      <img class="back" src="photos/photo_front.png">
+    </div>
 
-          currentImgIdFlippedOn[totalFlipOn-1] = $(this).attr("id");
-          
-          $(this).fadeOut(300,function() {
-            $(this).attr("src",$(this).attr("data-hide"));
-            $(this).css("display","");
-            
-            if (totalFlipOn == 2) {
+    <div class="card">
+      <img class="front" src="" alt="">
+      <img class="back" src="photos/photo_front.png">
+    </div>
 
-              let photo1 = $("#"+currentImgIdFlippedOn[totalFlipOn-2]);
-              let photo2 = $("#"+currentImgIdFlippedOn[totalFlipOn-1]);
+    <div class="card">
+      <img class="front" src="" alt="">
+      <img class="back" src="photos/photo_front.png">
+    </div>
 
-              photoFileName1 = photo1.attr("data-hide");
-              photoFileName2 = photo2.attr("data-hide");
+    <div class="card">
+      <img class="front" src="" alt="">
+      <img class="back" src="photos/photo_front.png">
+    </div>
 
-              if (photoFileName1 === photoFileName2) { 
-                setInterval(function() {
-                  setBlank(photo1,photo2);
-                }, 1000)
-              }
-              else { 
-                setInterval(function(){
-                // body...
-                reset(photo1,photo2);
-              }, 1000);
-              }
+    <div class="card">
+      <img class="front" src="" alt="">
+      <img class="back" src="photos/photo_front.png">
+    </div>
 
-              totalFlipOn = 0;
-            }
+    <div class="card">
+      <img class="front" src="" alt="">
+      <img class="back" src="photos/photo_front.png">
+    </div>
 
-          });
+    <div class="card">
+      <img class="front" src="" alt="">
+      <img class="back" src="photos/photo_front.png">
+    </div>
 
-        } ;
+  </div>
+  <footer>
 
-      }  
+    <p>Resources</p>
+    <p><a href="https://www.freevector.com/joker-head-vector-24534#">Joker Head Vecotr</a><br></p>
+    <p><a href="https://www.freevector.com/flat-colorful-joker-card-vectors-24576">Flat Colorful Joker Card Vectors</a></p>
 
-      $("img").click(flipOff);
+  </footer>
 
-      function logging(arg) {
-        console.log(arg);
-      }
+</div>
 
-      function reset(photo1, photo2) {
-        photo1.attr("src","photos/photo_front.png");
-        photo2.attr("src","photos/photo_front.png");
-      }
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="script.js"></script>
 
-      function setBlank(photo1, photo2) {
-        photo1.css("opacity",0);
-        photo2.css("opacity",0);
-
-      }
-
-    </script>
-
-  </body>
-  </html>
+</body>
+</html>
