--- a/memorycard/index.html
+++ b/memorycard/index.html
@@ -19,58 +19,8 @@
    <p>Click to see the effect.</p>
    <br><br>
 
-   <div class="row">
+   <div class="row" id="photos">
 
-    <div class="card">
-      <img class="front" src="" alt="">
-      <img class="back" src="photos/photo_front.png">
-    </div>
-
-
-    <div class="card">
-      <img class="front" src="" alt="">
-      <img class="back" src="photos/photo_front.png">
-    </div>
-
-    <div class="card">
-      <img class="front" src="" alt="">
-      <img class="back" src="photos/photo_front.png">
-    </div>
-
-    <div class="card">
-      <img class="front" src="" alt="">
-      <img class="back" src="photos/photo_front.png">
-    </div>
-
-    <div class="card">
-      <img class="front" src="" alt="">
-      <img class="back" src="photos/photo_front.png">
-    </div>
-
-    <div class="card">
-      <img class="front" src="" alt="">
-      <img class="back" src="photos/photo_front.png">
-    </div>
-
-    <div class="card">
-      <img class="front" src="" alt="">
-      <img class="back" src="photos/photo_front.png">
-    </div>
-
-    <div class="card">
-      <img class="front" src="" alt="">
-      <img class="back" src="photos/photo_front.png">
-    </div>
-
-    <div class="card">
-      <img class="front" src="" alt="">
-      <img class="back" src="photos/photo_front.png">
-    </div>
-
-    <div class="card">
-      <img class="front" src="" alt="">
-      <img class="back" src="photos/photo_front.png">
-    </div>
 
   </div>
   <footer>
